about and contact files, basic welcome page

--- a/index.html
+++ b/index.html
@@ -11,10 +11,40 @@
 
 <body>
     <header>
-        <a href="index.html" class="title-link"><h1>Alex McCaffrey/h1></a>
+        <a href="index.html" class="title-link"><h1>Alex McCaffrey</h1></a>
+        <nav>
+            <ul>
+                <li><a href="about.html">About Me</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
     </header>
 
+<main>
+    <div class="bio">
+        <img class="profileImg" src="images/profile-pic.jpeg" alt="Alex Profile Picture">
+    
+        <div class="item">
+            <h2>Who Am I</h2>
+                <p>I am Software Engineering student in the Thinkful Flex program.</p>
+                <p>I am currently located in the Denver area of Colorado, and moved 
+                    down from the mountains in July 2020. My past expereince has 
+                    revolved around work outdoors. I aim to combine my passion of the 
+                    outdoors with endless possibilites of coding.</p>
+        </div>
+    </div>
+<hr>
+    <section class="weather">
+        <h3>Local Weather in Devnver, CO</h3>
+        <div class="weather-results">
 
+        </div>
+    </section>
+
+
+
+</main>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
