about page added

--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
 
 <body>
     <header>
-        <a href="index.html" class="title-link"><h1>Alex McCaffrey</h1><img src="images/tm-logo.jpg" alt="tm logo" id="tm-logo"/></a>
+        <a href="index.html" class="title-link"><h1>Alex McCaffrey</h1></a>
         <nav>
             <ul>
                 <li><a href="about.html">About Me</a></li>
@@ -24,7 +24,8 @@
 <main>
     <div>
         <img class="mountain" src="images/mountain-sunrise.jpeg" alt="snowy mountain sunrise"/>
-    
+    </div>
+
         <section class="history">
             <h2>History</h2>
                 <p>I am a Massachusettes native that transplanted to Colorado in 2009 to start my college career. 
@@ -36,7 +37,6 @@
                 <p>I tend to suceed through sheer grit and determination to be the best that I can. If you have a passion 
                     for the outdoors, helping others, or exploring unchartered territory, I would love to work with you.</p>
         </section>
-    </div>
 <hr>
     <section class="weather">
         <h3>Local Weather in Devnver, CO</h3>
