fixed some layout issues

--- a/about.html
+++ b/about.html
@@ -22,10 +22,10 @@
     </header>
 
 <main>
-    <div>
+    <div class='top-image'>
         <img class="mountain" src="images/mountain-sunrise.jpeg" alt="snowy mountain sunrise"/>
     </div>
-
+        <div class='aboutme'>
         <section class="history">
             <h2>History</h2>
                 <p>I am a Massachusettes native that transplanted to Colorado in 2009 to start my college career. 
@@ -37,17 +37,45 @@
                 <p>I tend to suceed through sheer grit and determination to be the best that I can. If you have a passion 
                     for the outdoors, helping others, or exploring unchartered territory, I would love to work with you.</p>
         </section>
+
+        <section class="industries">
+            <div class="item">
+                <!--<img class="industryImg" src="images/gondola-fall.jpeg" alt="gondola surrounded by aspens">-->
+                <h3>Ski Industry</h3>
+                    <p>As ski resorts adapt to these unique times, they are faced with new restraints, requirements, and unknowns. 
+                        New technologies are immergeing, and will continue to immerge, to allow these resorts to operate at maximum 
+                        relative efficiency, while providing guests an experince that is seemingly unchanged.</p>
+                </div>
+            <div class="item">
+                <!--<img class="industryImg" src="images/snow-rescue.jpeg" alt="mountain rescuers in snow">-->
+                <h3>Search and Rescue</h3>
+                    <p>Search and Rescue organizations across the country live in the unkown. On top of that, a majority operate on 
+                        a volunteer basis, relying on the goodwill of other for manpower, and donations for essential equipment. Well 
+                        thought-out technology can not only save SAR organizations time and money, but could possibly save lives.</p>
+            </div>
+            <div class="item">
+               <!--<img class="industryImg" src="images/mountain-sunrise.jpeg" alt="mountain range in the morning">-->
+                <h3>Avalanche Safety</h3>
+                    <p>Snow safety is a not just a big product industry, it is a moral responsibility. It is important to promote, teach, 
+                        learn, and practice snow safety and responsibility. Creating applications, web resources, and other technology that 
+                        is easily accessible, easy to navigate, and easy to obtain, can leave to a greater knowledge base and overall safety 
+                        in the backcountry.</p>
+            </div>
+        </section>
+        </div>
 <hr>
     <section class="weather">
-        <h3>Local Weather in Devnver, CO</h3>
+        <h3>Weather in Devnver, CO</h3>
         <div class="weather-results">
 
         </div>
     </section>
 
-
-
 </main>
+
+<footer>
+    <p>&#169; Alex McCaffrey</p>
+</footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
