--- a/index.html
+++ b/index.html
@@ -46,6 +46,10 @@
 
 </main>
 
+<footer>
+    <p>&#169; Alex McCaffrey</p>
+</footer>
+
     <script src="https://code.jquery.com/jquery-3.3.1.js"
         integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
     <script src="main.js"></script>
